--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,96 @@ a {
     box-shadow: none !important;
 }
 
+html {
+    font-size: 18px;
+}
+
+body {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+h1 {
+    font-family: 'Nanum Gothic Coding', monospace;
+    text-transform: uppercase;
+    font-size: 2.3rem;
+}
+
+.active .green-link:link {
+    border: black 1px solid;
+    color: black !important;
+    
+}
+.active .green-link:visited {
+    border: black 1px solid;
+    color: black !important;
+}
+
+.green-link {
+    padding: 5px;
+    border: #12d06b 1px solid;
+    /* margin-bottom: 3px; */
+}
+
+
+
+.green-link:link {
+    color: #12d06b !important;
+}
+
+.green-link:visited {
+    color: #12d06b !important;
+}
+
+.green-link:hover {
+    background-color: #12d06b !important;
+    color: white !important;
+    text-decoration: none !important;
+}
+
+.custom-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(18, 208, 107, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  }
+  
+.custom-toggler.navbar-toggler {
+    border-color: rgb(18, 208, 107);
+} 
+
+.navbar-light .navbar-brand {
+    color: purple;
+    border: purple solid 1px;
+    padding-left: 9px;
+    padding-right: 9px;
+}
+
+.navbar-light .navbar-brand:hover {
+    color: purple;
+}
+
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+#no-border {
+    padding: 0;
+    border: none;
+}
+
+@media screen and (max-width:767px) {
+    .nav-item .green-link {
+        margin: 3px 0;
+        padding-left: 3px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    .nav-item .green-link {
+        margin-left: 3px;
+    }
+}
+
 /* INDEX */
 
 /* screen width from 0 to 359 */
