update link style on curatorial

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,14 @@ h1 {
     font-size: 2.3rem;
 }
 
+hr {
+    border: none;
+    height: 3px;
+    /* Set the hr color */
+    color: #333; /* old IE */
+    background-color: #333; /* Modern Browsers */
+}
+
 .custom-toggler .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(18, 208, 107, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
@@ -54,6 +62,22 @@ h1 {
     color: white !important;
     text-decoration: none !important;
 }
+/* .green-link-no-border {
+} */
+
+.green-link-no-border:link {
+    color: #12d06b !important;
+}
+
+.green-link-no-border:visited {
+    color: #12d06b !important;
+}
+
+.green-link-no-border:hover {
+    background-color: #12d06b !important;
+    color: white !important;
+    text-decoration: none !important;
+}
 
 .navbar-light .navbar-brand {
     color: purple;
@@ -71,11 +95,6 @@ h1 {
 .navbar-toggler-icon:focus {
     outline: none;
     box-shadow: none;
-}
-
-#no-border {
-    padding: 0;
-    border: none;
 }
 
 @media screen and (max-width:767px) {
